--- a/Public/admin/abort.html
+++ b/Public/admin/abort.html
@@ -121,6 +121,10 @@
     #example tr td {
         text-align: center;
     }
+
+    pre{
+        padding: 0;
+    }
 </style>
 <body>
 <div class="site-holder">
@@ -217,8 +221,8 @@
                     <div class="form-group" style="margin-top: 20px;">
                         <label for="content" class="col-sm-1 control-label">内容</label>
                         <div class="col-sm-10">
-                        <textarea class=" form-control" id="content" name="content"><pre></pre>
-                        </textarea>
+                        <pre><textarea class=" form-control" id="content" name="content">
+                        </textarea></pre>
                             </div>
                     </div>
                     <div class="form-group">
