--- a/Public/admin/index.html
+++ b/Public/admin/index.html
@@ -136,6 +136,10 @@
         text-overflow:ellipsis !important;
         overflow: hidden !important;
     }
+
+    pre{
+        padding: 0;
+    }
 </style>
 <body>
 <div class="site-holder">
@@ -238,8 +242,8 @@
                     <div class="form-group" style="margin-top: 20px;">
                         <label for="title" class="col-sm-1 control-label">内容</label>
                         <div class="col-sm-10">
-                        <textarea class=" form-control" id="content" name="content"><pre></pre>
-                        </textarea>
+                        <pre><textarea class=" form-control" id="content" name="content">
+                        </textarea></pre>
                             </div>
                     </div>
                     <div class="form-group">
