--- a/Public/admin/team.html
+++ b/Public/admin/team.html
@@ -40,6 +40,7 @@
         function save(id) {
             var intro = $('#intro').val();
             var show = $('#show').val();
+            var zn_en = $('#zn_en').val();
             $.ajax({
                 url: '/admin/team/team_save',
                 type: 'POST',
@@ -47,7 +48,8 @@
                 data: {
                     "id": id,
                     "intro": intro,
-                    "show":show
+                    "show":show,
+                    "zn_en":zn_en
                 },
                 success: function (r) {
                     if (r.code == 200) {
@@ -64,6 +66,7 @@
             var button = $('#insert').text();
             var intro = $('#intro').val();
             var show = $('#show').val();
+            var zn_en = $('#zn_en').val();
             if (button == '保存') {
                 save(this_id);
             } else {
@@ -73,7 +76,8 @@
                     dataType: 'json',
                     data: {
                         "intro": intro,
-                        "show":show
+                        "show":show,
+                        "zn_en":zn_en
                     },
                     success: function (r) {
                         if (r.code == 200) {
@@ -220,6 +224,13 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="show" class="col-sm-1 control-label">版式</label>
+                        <div class="col-sm-2">
+                            <select class="form-control" id="zn_en">
+                                <option>中文</option>
+                                <option>英文</option>
+                            </select>
+                        </div>
                         <label for="show" class="col-sm-1 control-label">展示</label>
                         <div class="col-sm-2">
                             <select class="form-control" id="show" name="show">
