--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -30,25 +30,53 @@
         if (aQuery.indexOf("abort") > 0) {
             $("#abort").css('color', '#9b761d');
         }
-        $.ajax({
-            "url": '/home/index/abort',
-            "dataType": 'json',
-            success: function (r) {
-                var content = '<pre>' + r.msg.content + '</pre>';
-                $('#content').html(content);
-            }
-        });
-
-        $.ajax({
-            "url": '/home/index/menu',
-            "dataType": 'json',
-            success: function (r) {
-                var length = r.msg.length;
-                for (var i = 0; i < length; i++) {
-                    $('#menu').append("<div class='col-lg-8 col-lg-offset-4 menu' onclick='menu_detail(" + r.msg[i].id + ")'>" + r.msg[i].menu + "<br>" + r.msg[i].english + "</div>");
+        if(aQuery.indexOf("status")>0){
+            $.ajax({
+                "url": '/home/index/abort',
+                "dataType": 'json',
+                "data":{
+                    "status":1
+                },
+                success: function (r) {
+                    var content = '<pre>' + r.msg.content + '</pre>';
+                    $('#content').html(content);
                 }
-            }
-        });
+            });
+
+            $.ajax({
+                "url": '/home/index/menu',
+                "dataType": 'json',
+                "data":{
+                    "status":1
+                },
+                success: function (r) {
+                    var length = r.msg.length;
+                    for (var i = 0; i < length; i++) {
+                        $('#menu').append("<div class='col-lg-8 col-lg-offset-4 menu' onclick='menu_detail(" + r.msg[i].id + ")'>" + r.msg[i].menu + "<br>" + r.msg[i].english + "</div>");
+                    }
+                }
+            });
+        }else{
+            $.ajax({
+                "url": '/home/index/abort',
+                "dataType": 'json',
+                success: function (r) {
+                    var content = '<pre>' + r.msg.content + '</pre>';
+                    $('#content').html(content);
+                }
+            });
+
+            $.ajax({
+                "url": '/home/index/menu',
+                "dataType": 'json',
+                success: function (r) {
+                    var length = r.msg.length;
+                    for (var i = 0; i < length; i++) {
+                        $('#menu').append("<div class='col-lg-8 col-lg-offset-4 menu' onclick='menu_detail(" + r.msg[i].id + ")'>" + r.msg[i].menu + "<br>" + r.msg[i].english + "</div>");
+                    }
+                }
+            });
+        }
     });
 
     function menu_detail(id) {
@@ -126,7 +154,7 @@
         </div>
         <div class="col-lg-5 col-lg-offset-3">
             <div class="col-lg-4 col-lg-offset-7"><a href="index.html" id="index"
-                                                     style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;中文&nbsp;|&nbsp;English
+                                                     style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;<a href="abort.html" style="text-decoration: none; color: #000">中文</a>&nbsp;|&nbsp;<a href="abort.html?status=1" style="text-decoration: none; color: #000">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="abort.html" style="text-decoration: none;" id="abort">关于我们</a></li>
@@ -148,13 +176,13 @@
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="/Public/home/images/banner1.jpg" style=" width:100%;" alt="First slide">
+            <img src="/Public/home/images/banner1.jpg" style=" width:100%;height: 300px;" alt="First slide">
         </div>
         <div class="item">
-            <img src="/Public/home/images/banner1.jpg" style="width:100%;" alt="Second slide">
+            <img src="/Public/home/images/banner1.jpg" style="width:100%;height: 300px;" alt="Second slide">
         </div>
         <div class="item">
-            <img src="/Public/home/images/banner1.jpg" style="width:100%;" alt="Third slide">
+            <img src="/Public/home/images/banner1.jpg" style="width:100%;height: 300px;" alt="Third slide">
         </div>
     </div>
 </div>
