--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -43,29 +43,58 @@
         if (aQuery.indexOf("contact") > 0) {
             $("#contact").css('color', '#9b761d');
         }
-        $.ajax({
-            "url": '/home/index/city',
-            "dataType": 'json',
-            success: function (r) {
-                var len = r.msg.length;
-                for (var i = 0; i < len; i++) {
-                    $('#city_list').append("<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>");
-                    $('#city').append("<div class='row detail'>" +
-                    "<div class='hidden'>" + r.msg[i].city + "</div>" +
-                    "<div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[i].img + "'>" +
+        if(aQuery.indexOf("status")>0){
+            $.ajax({
+                "url": '/home/index/city',
+                "dataType": 'json',
+                "data":{
+                    "status":1
+                },
+                success: function (r) {
+                    var len = r.msg.length;
+                    for (var i = 0; i < len; i++) {
+                        $('#city_list').append("<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>");
+                        $('#city').append("<div class='row detail'>" +
+                        "<div class='hidden'>" + r.msg[i].city + "</div>" +
+                        "<div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[i].img + "'>" +
+                        "</div>" +
+                        "<div class='col-lg-4 col-lg-offset-1'><p class='company'>" + r.msg[i].company + "</p><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><span>地址：</span>" + r.msg[i].add + "</p>" +
+                        "</div>" +
+                        "</div>");
+                    }
+                    $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
+                    $('#city_one').append("<div class='row'><div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-4 col-lg-offset-1'><p class='company'>" + r.msg[i].company + "</p><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><span>地址：</span>" + r.msg[i].add + "</p>" +
+                    "<div class='col-lg-4 col-lg-offset-1'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
                     "</div>" +
                     "</div>");
                 }
-                $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
-                $('#city_one').append("<div class='row'><div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[0].img + "'>" +
-                "</div>" +
-                "<div class='col-lg-4 col-lg-offset-1'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
-                "</div>" +
-                "</div>");
-            }
-        });
+            });
+        }else{
+            $.ajax({
+                "url": '/home/index/city',
+                "dataType": 'json',
+                success: function (r) {
+                    var len = r.msg.length;
+                    for (var i = 0; i < len; i++) {
+                        $('#city_list').append("<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>");
+                        $('#city').append("<div class='row detail'>" +
+                        "<div class='hidden'>" + r.msg[i].city + "</div>" +
+                        "<div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[i].img + "'>" +
+                        "</div>" +
+                        "<div class='col-lg-4 col-lg-offset-1'><p class='company'>" + r.msg[i].company + "</p><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><span>地址：</span>" + r.msg[i].add + "</p>" +
+                        "</div>" +
+                        "</div>");
+                    }
+                    $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
+                    $('#city_one').append("<div class='row'><div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[0].img + "'>" +
+                    "</div>" +
+                    "<div class='col-lg-4 col-lg-offset-1'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
+                    "</div>" +
+                    "</div>");
+                }
+            });
+        }
     });
 </script>
 <style>
@@ -106,7 +135,7 @@
             <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-5 col-lg-offset-3">
-            <div class="col-lg-4 col-lg-offset-7"><a href="index.html" style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;中文&nbsp;|&nbsp;English
+            <div class="col-lg-4 col-lg-offset-7"><a href="index.html" style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;<a href="contact.html" style="text-decoration: none; color: #000">中文</a>&nbsp;|&nbsp;<a href="contact.html?status=1" style="text-decoration: none; color: #000">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="abort.html" style="text-decoration: none;" id="abort">关于我们</a></li>
@@ -128,13 +157,13 @@
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="/Public/home/images/banner1.jpg" style=" width:100%;" alt="First slide">
+            <img src="/Public/home/images/banner1.jpg" style=" width:100%;height: 300px;" alt="First slide">
         </div>
         <div class="item">
-            <img src="/Public/home/images/banner1.jpg" style="width:100%;" alt="Second slide">
+            <img src="/Public/home/images/banner1.jpg" style="width:100%;height: 300px;" alt="Second slide">
         </div>
         <div class="item">
-            <img src="/Public/home/images/banner1.jpg" style="width:100%;" alt="Third slide">
+            <img src="/Public/home/images/banner1.jpg" style="width:100%;height: 300px;" alt="Third slide">
         </div>
     </div>
 </div>
