--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -26,6 +26,7 @@
 </style>
 <script>
     $(function () {
+        $("#news").css('color','#9b761d');
         var r = window.location.search;
         r = r.substring(r.indexOf("?")+4,r.length);
         var id = r;
@@ -75,13 +76,13 @@
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="/Public/home/images/banner1.jpg" style=" width:100%;" alt="First slide">
+            <img src="/Public/home/images/banner1.jpg" style=" width:100%;height: 300px;" alt="First slide">
         </div>
         <div class="item">
-            <img src="/Public/home/images/banner1.jpg" style="width:100%;" alt="Second slide">
+            <img src="/Public/home/images/banner1.jpg" style="width:100%;height: 300px;" alt="Second slide">
         </div>
         <div class="item">
-            <img src="/Public/home/images/banner1.jpg" style="width:100%;" alt="Third slide">
+            <img src="/Public/home/images/banner1.jpg" style="width:100%;height: 300px;" alt="Third slide">
         </div>
     </div>
 </div>
