--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -148,7 +148,7 @@
             <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-5 col-lg-offset-3">
-            <div class="col-lg-4 col-lg-offset-7"><a href="index.html" style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;中文&nbsp;|&nbsp;English
+            <div class="col-lg-4 col-lg-offset-7"><a href="index.html" style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;<a href="team.html" style="text-decoration: none; color: #000">中文</a>&nbsp;|&nbsp;<a href="team.html?status=1" style="text-decoration: none; color: #000">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="abort.html" style="text-decoration: none;" id="abort">关于我们</a></li>
@@ -170,13 +170,13 @@
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="/Public/home/images/banner1.jpg" style=" width:100%;" alt="First slide">
+            <img src="/Public/home/images/banner1.jpg" style=" width:100%;height: 300px;" alt="First slide">
         </div>
         <div class="item">
-            <img src="/Public/home/images/banner1.jpg" style="width:100%;" alt="Second slide">
+            <img src="/Public/home/images/banner1.jpg" style="width:100%;height: 300px;" alt="Second slide">
         </div>
         <div class="item">
-            <img src="/Public/home/images/banner1.jpg" style="width:100%;" alt="Third slide">
+            <img src="/Public/home/images/banner1.jpg" style="width:100%;height: 300px;" alt="Third slide">
         </div>
     </div>
 </div>
