--- a/Public/admin/abort.html
+++ b/Public/admin/abort.html
@@ -34,6 +34,7 @@
                     $('#form').css('display', 'block');
                     $('#content').val(r.msg.content);
                     $('#show').val(r.msg.show);
+                    $('#zn_en').val(r.msg.zn_en);
                     $('#insert').text('保存');
                 }
             })
