--- a/Public/admin/contact.html
+++ b/Public/admin/contact.html
@@ -39,6 +39,7 @@
                     $('#tel').val(r.msg.tel);
                     $('#city').val(r.msg.city);
                     $('#add').val(r.msg.add);
+                    $('#zn_en').val(r.msg.zn_en);
                     $('#insert').text('保存');
                 }
             })
