--- a/Public/admin/index.html
+++ b/Public/admin/index.html
@@ -36,6 +36,7 @@
                     $('#note').val(r.msg.note);
                     $('#content').val(r.msg.content);
                     $('#show').val(r.msg.show);
+                    $('#zn_en').val(r.msg.zn_en);
                     $('#insert').text('保存');
                 }
             })
