--- a/Public/admin/login.html
+++ b/Public/admin/login.html
@@ -113,7 +113,7 @@
                 },
                 success: function (r) {
                     if (r.code == 200) {
-                        window.location.href='/public/admin/index.html';
+                        window.location.href='/Public/admin/index.html';
                     } else {
                         alert(r.msg);
                     }
