--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -37,6 +37,8 @@
                     $('#position').val(r.msg.position);
                     $('#intro').val(r.msg.intro);
                     $('#english').val(r.msg.english);
+                    $('#zn_en').val(r.msg.zn_en);
+                    $('#show').val(r.msg.show);
                     $('#insert').text('保存');
                 }
             })
