--- a/Public/admin/menu.html
+++ b/Public/admin/menu.html
@@ -35,6 +35,7 @@
                     $('#form').css('display', 'block');
                     $('#menu').val(r.msg.menu);
                     $('#show').val(r.msg.show);
+                    $('#zn_en').val(r.msg.zn_en);
                     $('#insert').text('保存');
                     $('#row_title').empty();
                     var count = r.msg.content.length;
