--- a/Public/admin/news.html
+++ b/Public/admin/news.html
@@ -37,6 +37,7 @@
                     $('#content1').val(r.msg.content1);
                     $('#content2').val(r.msg.content2);
                     $('#content3').val(r.msg.content3);
+                    $('#zn_en').val(r.msg.zn_en);
                     $('#img1').val(r.msg.img1);
                     $('#img2').val(r.msg.img2);
                     $('#img3').val(r.msg.img3);
