--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -93,7 +93,7 @@
                     $('#detail').append("<div class='col-lg-8 col-lg-offset-4' style='border-bottom:1px #BBB solid;margin-bottom: 20px;padding-bottom: 20px;'>" +
                     "<div class='col-lg-1'><img src='/Public/home/images/1.jpg'></div><div class='title'>"+ r.msg.content[i][0]+"</div>" +
                     "<div class='en col-lg-offset-1'>"+ r.msg.content[i][2]+"</div>" +
-                    "<div class='content col-lg-offset-1'><pre>"+ r.msg.content[i][1]+"</pre></div></div>");
+                    "<div class='content col-lg-offset-1'><pre style='font-size: 14px; padding: 0'>"+ r.msg.content[i][1]+"</pre></div></div>");
                 }
             }
         })
