--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -103,11 +103,11 @@
 <div class="container" style="margin-top: 50px;">
     <div class="row">
         <div class="col-lg-12" id="title"
-             style="font-size: 40px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei', sans-serif">
+             style="font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei', sans-serif">
 
         </div>
         <div class="col-lg-12" id="content"
-             style="line-height:40px;margin-top:50px;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei', sans-serif">
+             style="color:#525c75;margin-top:50px;font-size: 14px; text-align: center; font-family: 'Microsoft YaHei', sans-serif">
 
         </div>
         <div class="col-lg-12" id="foot"
