--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -9,7 +9,7 @@
 </head>
 <style>
     ul li {
-        float: left;
+        float: right;
         margin-left: 20px;
         margin-top: 10px;
     }
@@ -30,12 +30,12 @@
         if (aQuery.indexOf("abort") > 0) {
             $("#abort").css('color', '#9b761d');
         }
-        if(aQuery.indexOf("status")>0){
+        if (aQuery.indexOf("status") > 0) {
             $.ajax({
                 "url": '/home/index/abort',
                 "dataType": 'json',
-                "data":{
-                    "status":1
+                "data": {
+                    "status": 1
                 },
                 success: function (r) {
                     var content = '<pre>' + r.msg.content + '</pre>';
@@ -46,8 +46,8 @@
             $.ajax({
                 "url": '/home/index/menu',
                 "dataType": 'json',
-                "data":{
-                    "status":1
+                "data": {
+                    "status": 1
                 },
                 success: function (r) {
                     var length = r.msg.length;
@@ -56,7 +56,7 @@
                     }
                 }
             });
-        }else{
+        } else {
             $.ajax({
                 "url": '/home/index/abort',
                 "dataType": 'json',
@@ -91,9 +91,9 @@
                 var len = r.msg.content.length;
                 for (var i = 0; i < len; i++) {
                     $('#detail').append("<div class='col-lg-8 col-lg-offset-4' style='border-bottom:1px #BBB solid;margin-bottom: 20px;padding-bottom: 20px;'>" +
-                    "<div class='col-lg-1'><img src='/Public/home/images/1.jpg'></div><div class='title'>"+ r.msg.content[i][0]+"</div>" +
-                    "<div class='en col-lg-offset-1'>"+ r.msg.content[i][2]+"</div>" +
-                    "<div class='content col-lg-offset-1'><pre style='font-size: 14px; padding: 0'>"+ r.msg.content[i][1]+"</pre></div></div>");
+                    "<div class='col-lg-1'><img src='/Public/home/images/1.jpg'></div><div class='title'>" + r.msg.content[i][0] + "</div>" +
+                    "<div class='en col-lg-offset-1'>" + r.msg.content[i][2] + "</div>" +
+                    "<div class='content col-lg-offset-1'><pre style='font-size: 14px;text-align: left !important; padding: 0'>" + r.msg.content[i][1] + "</pre></div></div>");
                 }
             }
         })
@@ -131,59 +131,47 @@
         color: #fff;
     }
 
-    .title{
+    .title {
         font-size: 20px;
         font-weight: 600;
     }
-    .en{
+
+    .en {
         font-size: 14px;
         font-weight: 600;
         color: #9b761d;
     }
 
-    .content{
+    .content {
         font-size: 12px;
         font-family: "Microsoft YaHei", sans-serif;
     }
 </style>
 <body>
-<div class="container" style="margin-top: 10px;">
+<div class="container" style="margin-top: 10px;width: 100% !important;">
     <div class="row">
         <div class="col-lg-4">
             <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-5 col-lg-offset-3">
-            <div class="col-lg-4 col-lg-offset-7"><a href="index.html" id="index"
-                                                     style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;<a href="abort.html" style="text-decoration: none; color: #000">中文</a>&nbsp;|&nbsp;<a href="abort.html?status=1" style="text-decoration: none; color: #000">English</a>
+            <div style="text-align: right"><a href="index.html" id="index"
+                                                     style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;<a
+                    href="abort.html" style="text-decoration: none; color: #000">中文</a>&nbsp;|&nbsp;<a
+                    href="abort.html?status=1" style="text-decoration: none; color: #000">English</a>
             </div>
             <ul style="list-style: none;">
-                <li><a href="abort.html" style="text-decoration: none;" id="abort">关于我们</a></li>
-                <li><a href="team.html" style="text-decoration: none;" id="team">投资团队</a></li>
-                <li><a href="#" style="text-decoration: none;">投资案例</a></li>
-                <li><a href="news.html" style="text-decoration: none;" id="news">新闻动态</a></li>
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
+                <li><a href="news.html" style="text-decoration: none;" id="news">新闻动态</a></li>
+                <li><a href="#" style="text-decoration: none;">投资案例</a></li>
+                <li><a href="team.html" style="text-decoration: none;" id="team">投资团队</a></li>
+                <li><a href="abort.html" style="text-decoration: none;" id="abort">关于我们</a></li>
             </ul>
         </div>
     </div>
 </div>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" style="margin-top: 10px;">
-    <!-- 轮播（Carousel）指标 -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <!-- 轮播（Carousel）项目 -->
-    <div class="carousel-inner">
-        <div class="item active">
-            <img src="/Public/home/images/banner1.jpg" style=" width:100%;height: 300px;" alt="First slide">
-        </div>
-        <div class="item">
-            <img src="/Public/home/images/banner1.jpg" style="width:100%;height: 300px;" alt="Second slide">
-        </div>
-        <div class="item">
-            <img src="/Public/home/images/banner1.jpg" style="width:100%;height: 300px;" alt="Third slide">
-        </div>
+<div style="margin-top: 10px;width: 100%;padding: 0">
+    <div style="width: 100%; padding: 0">
+        <img style="width: 100%; height: 400px;" src="/Public/home/images/banner4.jpg">
     </div>
 </div>
 <div class="container" style="margin-top: -50px;">
