--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -86,7 +86,6 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
@@ -98,9 +97,6 @@
         </div>
         <div class="item">
             <img src="/Public/home/images/banner3.jpg" style="width:100%;height: 400px;" alt="Third slide">
-        </div>
-        <div class="item">
-            <img src="/Public/home/images/banner4.jpg" style="width:100%;height: 400px;" alt="Fouth slide">
         </div>
     </div>
 </div>
@@ -124,7 +120,7 @@
     <div class="row">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;">
-            麦星投诉&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;&nbsp;&nbsp;联系我们&nbsp;&nbsp;|&nbsp;&nbsp;法律说明
+            麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;&nbsp;&nbsp;联系我们&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
 </div>
