--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -65,7 +65,7 @@
                     $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
                     $('#city_one').append("<div class='row'><div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-4 col-lg-offset-1'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
+                    "<div class='col-lg-5 col-lg-offset-1'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
                     "</div>" +
                     "</div>");
                 }
@@ -174,7 +174,7 @@
     <div class="row">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;">
-            麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;&nbsp;&nbsp;联系我们&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
+            麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
 </div>
