--- a/Public/home/law.html
+++ b/Public/home/law.html
@@ -89,7 +89,7 @@
     <div class="row">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;">
-            麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;&nbsp;&nbsp;联系我们&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
+            麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
 </div>
