--- a/Public/admin/index.html
+++ b/Public/admin/index.html
@@ -145,7 +145,10 @@
     pre{
         padding: 0;
     }
-    
+
+    textarea{
+        height: 200px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
