--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -146,6 +146,10 @@
     #example tr td {
         text-align: center
     }
+
+    textarea{
+        height: 200px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
