--- a/Public/admin/menu.html
+++ b/Public/admin/menu.html
@@ -189,6 +189,10 @@
     pre{
         padding: 0;
     }
+
+    textarea{
+        height: 200px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
