--- a/Public/admin/abort.html
+++ b/Public/admin/abort.html
@@ -130,6 +130,10 @@
     pre{
         padding: 0;
     }
+
+    textarea{
+        height: 200px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
