--- a/Public/admin/contact.html
+++ b/Public/admin/contact.html
@@ -151,6 +151,10 @@
     #example tr td {
         text-align: center
     }
+
+    textarea{
+        height: 200px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
@@ -301,15 +305,11 @@
                         <div class="col-sm-2">
                             <select class="form-control" id="city" name="city">
                                 <option>北京</option>
-                                <option>上海</option>
-                                <option>广州</option>
+                                <option>BeiJing</option>
                                 <option>深圳</option>
-                                <option>重庆</option>
+                                <option>ShenZhen</option>
                                 <option>香港</option>
-                                <option>澳门</option>
-                                <option>天津</option>
-                                <option>杭州</option>
-                                <option>成都</option>
+                                <option>HongKong</option>
                             </select>
                         </div>
                     </div>
