--- a/Public/admin/news.html
+++ b/Public/admin/news.html
@@ -171,6 +171,10 @@
     #example tr td {
         text-align: center
     }
+
+    textarea{
+        height: 200px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
