--- a/Public/admin/team.html
+++ b/Public/admin/team.html
@@ -126,6 +126,10 @@
     #example tr td {
         text-align: center
     }
+
+    textarea{
+        height: 200px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
