--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -31,6 +31,7 @@
             $("#abort").css('color', '#9b761d');
         }
         if (aQuery.indexOf("status") > 0) {
+            $('#title').text('Maision Message');
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
@@ -62,7 +63,7 @@
                 success: function (r) {
                     var length = r.msg.length;
                     for (var i = 0; i < length; i++) {
-                        $('#menu').append("<div class='col-lg-8 col-lg-offset-4 menu' onclick='menu_detail(" + r.msg[i].id + ")'>" + r.msg[i].menu + "<br>" + r.msg[i].english + "</div>");
+                        $('#menu').append("<div class='row'><div class='col-lg-2 col-lg-offset-1 menu' onclick='menu_detail(" + r.msg[i].id + ")'>" + r.msg[i].menu + "</div></div>");
                     }
                 }
             });
@@ -82,7 +83,7 @@
                 success: function (r) {
                     var length = r.msg.length;
                     for (var i = 0; i < length; i++) {
-                        $('#menu').append("<div class='col-lg-8 col-lg-offset-4 menu' onclick='menu_detail(" + r.msg[i].id + ")'>" + r.msg[i].menu + "<br>" + r.msg[i].english + "</div>");
+                        $('#menu').append("<div class='row'><div class='col-lg-2 col-lg-offset-1 menu' onclick='menu_detail(" + r.msg[i].id + ")'>" + r.msg[i].english + "</div></div>");
                     }
                 }
             });
@@ -120,7 +121,6 @@
 
     #menu {
         margin-top: 20px;
-        width: 22%;
         position: absolute;
     }
 
@@ -128,10 +128,9 @@
         font-size: 16px;
         font-weight: 600;
         background-color: #EEE;
-        margin-left: 38.5%;
-        width: 180px;
         text-align: center;
         padding-top: 5px;
+        padding-bottom: 5px;
         border-bottom: #fff solid
     }
 
@@ -155,6 +154,10 @@
     .content {
         font-size: 12px;
         font-family: "Microsoft YaHei", sans-serif;
+    }
+
+    .col-lg-2{
+        width: 14%; !important;
     }
 </style>
 <body>
@@ -181,19 +184,18 @@
 </div>
 <div style="margin-top: 10px;width: 100%;padding: 0">
     <div style="width: 100%; padding: 0">
-        <img style="width: 100%; height: 400px;" src="/Public/home/images/banner4.jpg">
+        <img style="width: 100%;" src="/Public/home/images/banner4.jpg">
     </div>
 </div>
 <div class="container" style="margin-top: -50px;">
-    <div class="row" style="">
-        <div class="col-lg-3 col-lg-offset-1">
-            <img src="/Public/home/images/abort_us.jpg" style="opacity:0.9;-webkit-opacity:0.9;">
+    <div class="row" style="width: 100%;margin-top: -10px;" id="menu">
+        <div class="row">
+        <div class="col-lg-2 col-lg-offset-1" style="padding: 0;margin-bottom: 10px;">
+            <img src="/Public/home/images/abort_us.jpg" style="opacity:0.9;-webkit-opacity:0.9;width: 100%;">
+        </div>
         </div>
     </div>
-    <div class="row" id="menu" style="">
-
-    </div>
-    <div class="row" id="detail">
+    <div class="row" id="detail" style="margin-top: 120px;">
         <div class="col-lg-10 col-lg-offset-2" id="title"
              style="font-size: 24px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei', sans-serif">
             麦星寄语
