--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -159,7 +159,7 @@
 </div>
 <div style="margin-top: 10px;width: 100%;padding: 0">
     <div style="width: 100%; padding: 0">
-        <img style="width: 100%; height: 400px;" src="/Public/home/images/banner3.jpg">
+        <img style="width: 100%;" src="/Public/home/images/banner3.jpg">
     </div>
 </div>
 <div class="container" style="margin-top: -50px;">
