--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -100,13 +100,13 @@
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="/Public/home/images/banner1.jpg" style=" width:100%;height: 400px;" alt="First slide">
+            <img src="/Public/home/images/banner1.jpg" style=" width:100%;" alt="First slide">
         </div>
         <div class="item">
-            <img src="/Public/home/images/banner4.jpg" style="width:100%;height: 400px;" alt="Second slide">
+            <img src="/Public/home/images/banner4.jpg" style="width:100%;" alt="Second slide">
         </div>
         <div class="item">
-            <img src="/Public/home/images/banner3.jpg" style="width:100%;height: 400px;" alt="Third slide">
+            <img src="/Public/home/images/banner3.jpg" style="width:100%;font-family:arial" alt="Third slide">
         </div>
     </div>
 </div>
